syntax = "proto3";

package chef.automate.domain.report_manager.service;
option go_package = "github.com/chef/automate/api/interservice/report_manager";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

service ReportManagerService {
	rpc StoreReport(stream StoreReportRequest) returns (google.protobuf.Empty) {};
	rpc PrepareCustomReport(CustomReportRequest) returns (CustomReportResponse) {};
	rpc GetAllRequestsStatus(AllStatusRequest) returns (AllStatusResponse) {}; 
	rpc GetPresignedURL(GetPresignedURLRequest) returns (GetPresignedURLResponse) {};
}

message ListFilter {
	repeated string values = 1;
	string type = 2;
}

message StoreReportRequest {
	bytes content = 1;
}

message CustomReportRequest {
	string requestor_id = 1;
	string report_type = 2;
	repeated ListFilter filters = 3;
}

message CustomReportResponse {
	string acknowledgement_id = 1;
}

message AllStatusRequest {
	string requestor_id = 1;
}

message AllStatusResponse {
	repeated StatusResponse data = 1;
}

message StatusResponse {
	string acknowledgement_id = 1;
	string status = 2;
	int64 report_size = 3;
	string err_message = 4;
	google.protobuf.Timestamp created_at = 5;
	google.protobuf.Timestamp ended_at = 6;
	string duration = 7;
	string report_type = 8;
}

message GetPresignedURLRequest {
	string id = 1;
	string requestor_id = 2;
}

message GetPresignedURLResponse {
	string url = 1;
	string report_type = 2;
	int64 report_size = 3;
}
